--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Copy this to .env and fill values (keep .env out of git).
 # Optional: Finnhub token for earnings calendar (free tier works)
-FINNHUB_TOKEN=
+FINNHUB_TOKEN=cv4e0qpr01qn2ga9l5b0cv4e0qpr01qn2ga9l5bg
 
 # Runtime region/timezone (we’ll default to America/Chicago if empty)
 APP_TZ=America/Chicago
