--- a/src/ets/config/weights.yaml
+++ b/src/ets/config/weights.yaml
@@ -1,27 +1,20 @@
-# Global base exponents
 base:
-  wm: 0.3      # Momentum
-  wv: 0.2      # Volume/Liquidity
-  ws: 0.2      # Sector/Peer alignment
-  wa: 0.3      # Analyst/estimate trend
-  w_sigma: 0.5 # Volatility risk (as goodness when inverted)
-  w_tau: 0.5   # Tail/crowding/liquidity risk (as goodness when inverted)
+  m: 0.30
+  v: 0.20
+  s: 0.10
+  a: 0.10
+  sigma: -0.05
+  tau: -0.05
+  cal: -0.05      # NEW: calendar density (crowding)
+  srm: 0.10       # NEW: sector relative momentum
+  peer: 0.08      # NEW: peer earnings drift
+  etff: 0.04      # NEW: sector ETF "flow" proxy
+  vix_risk: -0.04 # NEW: macro VIX risk
+  trend: 0.02     # NEW: search interest
 
-# Sector multipliers (applied to base exponents)
 multipliers:
-  Consumer Discretionary: { m: 1.3, v: 1.2, s: 1.3, a: 1.1, tau: 1.0 }
-  Industrials:            { m: 1.2, v: 1.1, s: 1.3, a: 1.0, tau: 1.0 }
-  Materials:              { m: 1.1, v: 1.2, s: 1.2, a: 1.0, tau: 1.2 }
-  Energy:                 { m: 1.1, v: 1.2, s: 1.1, a: 0.9, tau: 1.3 }
-  Financials:             { m: 0.9, v: 1.0, s: 1.2, a: 1.4, tau: 1.0 }
-  Information Technology: { m: 1.1, v: 1.0, s: 1.1, a: 1.3, tau: 1.2 }
-  Communication Services: { m: 0.7, v: 0.8, s: 0.8, a: 0.8, tau: 1.4 }
-  Health Care:            { m: 0.7, v: 0.8, s: 0.8, a: 0.8, tau: 1.4 }
-  Consumer Staples:       { m: 0.7, v: 0.8, s: 0.8, a: 0.8, tau: 1.4 }
-  Utilities:              { m: 0.7, v: 0.8, s: 0.8, a: 0.8, tau: 1.4 }
-  Real Estate:            { m: 0.7, v: 0.8, s: 0.8, a: 0.8, tau: 1.4 }
-  _default:               { m: 1.0, v: 1.0, s: 1.0, a: 1.0, tau: 1.0 }
+  _default: { m: 1.0, v: 1.0, s: 1.0, a: 1.0, sigma: 1.0, tau: 1.0, cal: 1.0, srm: 1.0, peer: 1.0, etff: 1.0, vix_risk: 1.0, trend: 1.0 }
 
 caps:
-  exp_min: 0.10
-  exp_max: 0.80
+  exp_min: 0.3
+  exp_max: 3.0
