--- a/src/ets/config/weights.yaml
+++ b/src/ets/config/weights.yaml
@@ -1,20 +1,42 @@
 base:
-  m: 0.30
-  v: 0.20
-  s: 0.10
-  a: 0.10
-  sigma: -0.05
-  tau: -0.05
-  cal: -0.05      # NEW: calendar density (crowding)
-  srm: 0.10       # NEW: sector relative momentum
-  peer: 0.08      # NEW: peer earnings drift
-  etff: 0.04      # NEW: sector ETF "flow" proxy
-  vix_risk: -0.04 # NEW: macro VIX risk
-  trend: 0.02     # NEW: search interest
-
-multipliers:
-  _default: { m: 1.0, v: 1.0, s: 1.0, a: 1.0, sigma: 1.0, tau: 1.0, cal: 1.0, srm: 1.0, peer: 1.0, etff: 1.0, vix_risk: 1.0, trend: 1.0 }
-
-caps:
-  exp_min: 0.3
-  exp_max: 3.0
+  M_raw: 1.3
+  V_raw: 1.1
+  S_raw: 0.6
+  A_raw: 0.8
+  sigma_raw: -0.4
+  tau_raw: -0.3
+  CAL_raw: 0.8
+  SRM_raw: 0.7
+  PEER_raw: 1.0
+  ETFF_raw: 0.4
+  VIX_raw: -0.4
+  TREND_raw: 0.3
+sectors:
+  Information Technology:
+    M_raw: 1.5
+    V_raw: 1.2
+    PEER_raw: 1.2
+    SRM_raw: 0.9
+    VIX_raw: -0.3
+  Consumer Discretionary:
+    TREND_raw: 0.6
+    S_raw: 0.8
+    ETFF_raw: 0.6
+    M_raw: 1.4
+  Health Care:
+    A_raw: 1.2
+    tau_raw: -0.5
+    sigma_raw: -0.5
+    TREND_raw: 0.1
+    CAL_raw: 1.0
+  Financials:
+    SRM_raw: 1.1
+    ETFF_raw: 0.7
+    VIX_raw: -0.6
+    M_raw: 1.1
+  Industrials:
+    PEER_raw: 1.1
+    SRM_raw: 1.0
+    ETFF_raw: 0.6
+    VIX_raw: -0.6
+multipliers: {}
