--- a/src/ets/config/weights.yaml
+++ b/src/ets/config/weights.yaml
@@ -1,42 +1,3 @@
-base:
-  M_raw: 1.3
-  V_raw: 1.1
-  S_raw: 0.6
-  A_raw: 0.8
-  sigma_raw: -0.4
-  tau_raw: -0.3
-  CAL_raw: 0.8
-  SRM_raw: 0.7
-  PEER_raw: 1.0
-  ETFF_raw: 0.4
-  VIX_raw: -0.4
-  TREND_raw: 0.3
-sectors:
-  Information Technology:
-    M_raw: 1.5
-    V_raw: 1.2
-    PEER_raw: 1.2
-    SRM_raw: 0.9
-    VIX_raw: -0.3
-  Consumer Discretionary:
-    TREND_raw: 0.6
-    S_raw: 0.8
-    ETFF_raw: 0.6
-    M_raw: 1.4
-  Health Care:
-    A_raw: 1.2
-    tau_raw: -0.5
-    sigma_raw: -0.5
-    TREND_raw: 0.1
-    CAL_raw: 1.0
-  Financials:
-    SRM_raw: 1.1
-    ETFF_raw: 0.7
-    VIX_raw: -0.6
-    M_raw: 1.1
-  Industrials:
-    PEER_raw: 1.1
-    SRM_raw: 1.0
-    ETFF_raw: 0.6
-    VIX_raw: -0.6
+base: {M:1,V:1,S:1,A:1,sigma:1,tau:1,CAL:1,SRM:1,PEER:1,ETFF:1,VIX:1,TREND:1}
 multipliers: {}
+caps: {}
