--- a/.github/workflows/ets-backtest.yml
+++ b/.github/workflows/ets-backtest.yml
@@ -13,24 +13,27 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
       - name: Install
         run: |
           python -m pip install --upgrade pip wheel setuptools pytest
           pip install -e .
           pip install pandas
+
       - name: Run backtest (fixtures)
         env:
           BACKTEST_SIGNALS: tests/fixtures/mock_signals.csv
           BACKTEST_HISTORY: tests/fixtures/mock_history.csv
         run: |
           python scripts/run_backtest.py
+
       - name: Pytest (backtest core)
         run: pytest -q --disable-warnings tests/test_backtest_core.py
+
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           name: ets-backtest
           path: |
-            out/backtest_summary.json
-            out/sector_accuracy.csv
-            metrics/*backtest_perf.json
+            metrics/backtest_perf.json
+            reports/backtest_summary.csv
