Normalize working-directory paths across all CI workflows

--- a/.github/workflows/ets-backtest.yml
+++ b/.github/workflows/ets-backtest.yml
@@ -13,7 +13,10 @@ jobs:
         working-directory: /home/runner/work/EarningsTradingSystem_V1/EarningsTradingSystem_V1
     defaults:
       run:
-        working-directory: ./EarningsTradingSystem_V1
+    defaults:
+      run:
+    defaults:
+      run:
 
     steps:
       - uses: actions/checkout@v4
