--- a/.github/workflows/ets-backtest.yml
+++ b/.github/workflows/ets-backtest.yml
@@ -11,3 +11,21 @@ jobs:
     defaults:
       run:
         working-directory: /home/runner/work/EarningsTradingSystem_V1/EarningsTradingSystem_V1
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.11
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip wheel setuptools pytest
+          pip install -e .
+          pip install pandas
+
+      - name: Run backtest
+        run: |
+          python scripts/run_backtest.py
