Fix PYTHONPATH in Backtest workflow (src visibility for CI runner)

--- a/.github/workflows/ets-backtest.yml
+++ b/.github/workflows/ets-backtest.yml
@@ -27,5 +27,7 @@ jobs:
           pip install pandas
 
       - name: Run backtest
+        env:
+          PYTHONPATH: /home/runner/work/EarningsTradingSystem_V1/EarningsTradingSystem_V1/src
         run: |
           python scripts/run_backtest.py
