--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,22 +1,33 @@
 name: ci
-on: { push: { branches: ["**"] }, pull_request: {} }
+
+on:
+  push:
+    branches: [ main, ets_update_2 ]
+  pull_request:
+  workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: /home/runner/work/EarningsTradingSystem_V1/EarningsTradingSystem_V1
+    env:
+      PYTHONPATH: /home/runner/work/EarningsTradingSystem_V1/EarningsTradingSystem_V1/src
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with: { python-version: "3.11" }
-      - name: Bootstrap
+      - name: Checkout repository
+        uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+      - name: Install deps
         run: |
-          python -m venv .venv
-          . .venv/bin/activate
-          pip install -U pip wheel
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          if [ -f pyproject.toml ]; then pip install -e .; fi
-      - name: Tests
-        env:
-          ETS_MODE: dry
+          python -m pip install --upgrade pip wheel setuptools pandas pytest ruff black
+      - name: Lint + Format (non-fatal)
         run: |
-          . .venv/bin/activate
-          PYTHONPATH=src pytest -q || true
+          ruff check . || true
+          black --check . || true
+      - name: Run minimal tests
+        run: |
+          pytest -q --disable-warnings || true
