--- a/.github/workflows/ets-backtest.yml
+++ b/.github/workflows/ets-backtest.yml
@@ -10,11 +10,9 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: /home/runner/work/EarningsTradingSystem_V1
-
+        working-directory: /home/runner/work/EarningsTradingSystem_V1/EarningsTradingSystem_V1
     env:
-      PYTHONPATH: /home/runner/work/EarningsTradingSystem_V1/src
-
+      PYTHONPATH: /home/runner/work/EarningsTradingSystem_V1/EarningsTradingSystem_V1/src
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,16 +24,16 @@ jobs:
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel setuptools pytest pandas
+          python -m pip install --upgrade pip wheel setuptools pytest pandas ruff black
 
-      - name: Run backtest
+      - name: Run backtest (fixtures)
         env:
           BACKTEST_SIGNALS: tests/fixtures/mock_signals.csv
           BACKTEST_HISTORY: tests/fixtures/mock_history.csv
         run: |
           python scripts/run_backtest.py
 
-      - name: Run tests
+      - name: Pytest (backtest core)
         run: pytest -q --disable-warnings tests/test_backtest_core.py
 
       - name: Upload artifacts
@@ -43,6 +41,5 @@ jobs:
         with:
           name: ets-backtest
           path: |
-            reports/backtest_summary.json
-            metrics/sector_accuracy.csv
-            metrics/*backtest_perf.json
+            reports/**
+            metrics/**
