--- a/.github/workflows/ets_analytics.yml
+++ b/.github/workflows/ets_analytics.yml
@@ -1,4 +1,4 @@
-name: ETS Provider Validation
+name: ETS Analytics Suite
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  provider_validation:
+  analytics:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -16,20 +16,28 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install deps
+
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel setuptools pandas pytest ruff black
-      - name: Validate providers (mock mode)
+          python -m pip install --upgrade pip wheel setuptools pytest pandas ruff black
+
+      - name: Run analytics script
         run: |
-          python scripts/validate_providers.py || true
-      - name: Upload provider artifacts
+          if [ -f scripts/run_analytics.py ]; then python scripts/run_analytics.py; else echo "run_analytics.py not present, skipping"; fi
+
+      - name: Pytest (analytics-related)
+        run: |
+          pytest -q --disable-warnings tests/test_sector_summary.py tests/test_history_compare.py || true
+
+      - name: Upload analytics artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ets-provider-validation
+          name: ets-analytics
           path: |
-            out/**
+            reports/**
             metrics/**
