--- a/.github/workflows/ets_full_smoke.yml
+++ b/.github/workflows/ets_full_smoke.yml
@@ -1,4 +1,4 @@
-name: ETS Provider Validation
+name: ETS Full Smoke + CLI
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  provider_validation:
+  smoke:
     runs-on: ubuntu-latest
     defaults:
       run:
@@ -16,20 +16,29 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install deps
+
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel setuptools pandas pytest ruff black
-      - name: Validate providers (mock mode)
+          python -m pip install --upgrade pip wheel setuptools pytest pandas ruff black
+
+      - name: Run CLI smoke (if present)
         run: |
-          python scripts/validate_providers.py || true
-      - name: Upload provider artifacts
+          if [ -f scripts/cli_mock_run.py ]; then python scripts/cli_mock_run.py || true; fi
+          if [ -f scripts/smoke_offline.py ]; then python scripts/smoke_offline.py --tickers tests/fixtures/tickers.csv --out out/smoke_cli.csv || true; fi
+
+      - name: Pytest (entire suite)
+        run: pytest -q --disable-warnings
+
+      - name: Upload smoke artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: ets-provider-validation
+          name: ets-smoke
           path: |
             out/**
+            reports/**
             metrics/**
