--- a/.github/workflows/ets-env-setup.yml
+++ b/.github/workflows/ets-env-setup.yml
@@ -1,25 +1,70 @@
-name: ETS Env Setup
+name: ETS • Phase 1 • Env Setup
 
 on:
   push:
     branches: [ main, ets_update_2 ]
+  pull_request:
+    branches: [ main, ets_update_2 ]
   workflow_dispatch:
 
 jobs:
-  env:
+  env-setup:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: /home/runner/work/EarningsTradingSystem_V1/EarningsTradingSystem_V1
+
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-      - name: Install baseline deps
+          cache: "pip"
+
+      - name: Show Python info
         run: |
-          python -m pip install --upgrade pip wheel setuptools pandas ruff black pytest
-      - name: Verify environment
-        run: python -c "import sys,platform;print('OK',sys.version,platform.system())"
+          python -V
+          which python
+          pip -V
+
+      - name: Install dependencies (runtime + dev)
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          pip install -r requirements.txt
+          # Install package so `import ets` works in CI (src/ layout)
+          pip install -e .
+
+      - name: Pre-commit (lint/format checks)
+        run: |
+          pre-commit install --install-hooks
+          # CI-safe: checks only, no auto-fixes (deterministic)
+          pre-commit run --all-files --show-diff-on-failure
+
+      - name: Verify import path / package wiring
+        env:
+          PYTHONPATH: ./src
+        run: |
+          python - << 'PY'
+          import sys, platform
+          print("✔ PYTHON:", sys.version)
+          print("✔ PLATFORM:", platform.platform())
+          # Ensure src/ets is importable
+          try:
+              import ets
+              print("✔ import ets: OK")
+          except Exception as e:
+              print("✖ import ets failed:", e)
+              raise SystemExit(1)
+          PY
+
+      - name: Freeze environment (artifact for traceability)
+        run: |
+          mkdir -p .ci/lock
+          pip freeze | tee .ci/lock/requirements-lock.txt
+
+      - name: Upload lock artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: env-lock-ubuntu-py311
+          path: .ci/lock/requirements-lock.txt
+          if-no-files-found: error
