--- a/.github/workflows/ets-provider-validate.yml
+++ b/.github/workflows/ets-provider-validate.yml
@@ -2,7 +2,7 @@ name: ETS Provider Validation
 
 on:
   push:
-    branches: [ main, ets_update_2 ]
+    branches: [ main, ets_update_2*, ets_update_3 ]
   workflow_dispatch:
 
 jobs:
