Enable Phase 2 backtest trigger on ets_update_3

--- a/.github/workflows/ets-backtest.yml
+++ b/.github/workflows/ets-backtest.yml
@@ -2,7 +2,7 @@ name: ETS • Phase 2 • Backtest
 
 on:
   push:
-    branches: [ main, ets_update_2*, ets_update_3 ]
+    branches: [ main, ets_update_2, ets_update_3 ]
     paths:
       - "src/**"
       - "scripts/**"
