--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,15 @@
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
+
+[project]
+name = "ets"
+version = "0.1.0"
+description = "Earnings Trading System"
+readme = "README.md"
+requires-python = ">=3.11"
+dependencies = []
+
 [tool.black]
 line-length = 100
 target-version = ["py311"]
