Trigger full CI chain (Phase 1 → Phase 2 → Backtest → Smoke)

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,1 +1,4 @@
 [pytest]
+markers =
+    smoke: lightweight sanity tests (<60s)
+    integration: full offline integration tests using fixtures/mocks
