--- a/.github/workflows/ets-full.yml
+++ b/.github/workflows/ets-full.yml
@@ -1,30 +1,24 @@
-name: ETS Full Smoke + CLI
+name: Trigger full CI chain (Phase 1 → Phase 2 → Backtest → Smoke)
 
 on:
-  push:
-    branches: [ main, ets_update_2*, ets_update_3 ]
   workflow_dispatch:
 
 jobs:
-  test:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
-      - name: Install
-        run: |
-          python -m pip install --upgrade pip setuptools wheel pytest
-          pip install -e .
-      - name: Run offline suite
-        env:
-          ETS_SESSION: amc
-        run: pytest -q --disable-warnings
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: ets-out
-          path: |
-            out/*.csv
-            logs/*.log
+  env-setup:
+    name: Phase 1 – Env Setup
+    uses: ./.github/workflows/ets-env-setup.yml
+
+  provider-validate:
+    name: Phase 2 – Provider Validation
+    needs: env-setup
+    uses: ./.github/workflows/ets-provider-validate.yml
+
+  backtest:
+    name: Phase 3 – Backtest
+    needs: provider-validate
+    uses: ./.github/workflows/ets-backtest.yml
+
+  smoke:
+    name: Phase 4 – Smoke + CLI
+    needs: backtest
+    uses: ./.github/workflows/ets-smoke-cli.yml
