--- a/.github/workflows/ets-env-setup.yml
+++ b/.github/workflows/ets-env-setup.yml
@@ -1,72 +1,31 @@
-name: ETS • Phase 1 • Env Setup
+name: Phase 1 - Env Setup
 
 on:
-  push:
-    branches: [ main, ets_update_2*, ets_update_3 ]
-  pull_request:
-    branches: [ main, ets_update_2*, ets_update_3 ]
   workflow_dispatch:
+  workflow_call:
 
 jobs:
   env-setup:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout
+      - name: Checkout repo
         uses: actions/checkout@v4
-
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-          cache: "pip"
-
-      - name: Show Python info
+      - name: Install dependencies
         run: |
-          python -V
-          which python
-          pip -V
-
-      - name: Install dependencies (runtime + dev)
-        run: |
-          python -m pip install --upgrade pip setuptools wheel
-          pip install -r requirements.txt
-          # Install package so `import ets` works in CI (src/ layout)
-          pip install -e .
-
-      - name: Install pre-commit
-        run: pip install pre-commit
-
-      - name: Pre-commit (lint/format checks, non-fatal)
+          python -m pip install --upgrade pip wheel setuptools
+          pip install -r requirements.txt || true
+      - name: Run pre-commit (lint/format checks)
         run: |
           pre-commit install --install-hooks
-          pre-commit run --all-files --show-diff-on-failure || true
-
-      - name: Verify import path / package wiring
-        env:
-          PYTHONPATH: ./src
-        run: |
-          python - << 'PY'
-          import sys, platform
-          print("✔ PYTHON:", sys.version)
-          print("✔ PLATFORM:", platform.platform())
-          # Ensure src/ets is importable
-          try:
-              import ets
-              print("✔ import ets: OK")
-          except Exception as e:
-              print("✖ import ets failed:", e)
-              raise SystemExit(1)
-          PY
-
-      - name: Freeze environment (artifact for traceability)
-        run: |
-          mkdir -p .ci/lock
-          pip freeze | tee .ci/lock/requirements-lock.txt
-
-      - name: Upload lock artifact
+          pre-commit run --all-files --show-diff-on-failure
+      - name: Freeze environment
+        run: pip freeze > env-lock-ubuntu-py311.txt
+      - name: Upload lockfile artifact
         uses: actions/upload-artifact@v4
         with:
           name: env-lock-ubuntu-py311
-          path: .ci/lock/requirements-lock.txt
-          if-no-files-found: error
+          path: env-lock-ubuntu-py311.txt
