--- a/.github/workflows/ets-env-setup.yml
+++ b/.github/workflows/ets-env-setup.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
+          pip install pre-commit ruff black pytest pandas || true
           pip install -r requirements.txt || true
       - name: Run pre-commit (lint/format checks)
         run: |
