--- a/.github/workflows/ets-provider-validate.yml
+++ b/.github/workflows/ets-provider-validate.yml
@@ -10,9 +10,17 @@ jobs:
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip wheel setuptools
+          pip install pandas requests pyyaml || true
+          pip install -r requirements.txt || true
+
       - name: Validate data providers
         run: python scripts/validate_providers.py
