--- a/.github/workflows/ets-backtest.yml
+++ b/.github/workflows/ets-backtest.yml
@@ -1,4 +1,4 @@
-name: Phase 3 - Backtest
+name: Phase 3 – Backtest
 
 on:
   workflow_dispatch:
@@ -7,18 +7,39 @@ on:
 jobs:
   backtest:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip wheel setuptools
+          pip install -r requirements.txt || true
+
+      # 🔥 REQUIRED FIX — makes `import ets` work in GitHub Actions
+      - name: Install ETS (editable mode)
+        run: pip install -e .
+
+      - name: Prepare test tickers
+        run: |
+          echo "AAPL" > tickers.csv
+          echo "MSFT" >> tickers.csv
+
       - name: Run backtest
         run: |
-          python -m ets.main --session amc --date 2024-10-02 --tickers tickers.csv
+          python -m ets.main \
+            --session amc \
+            --date 2024-10-02 \
+            --tickers tickers.csv
+
       - name: Upload results
         uses: actions/upload-artifact@v4
         with:
-          name: backtest-outputs
+          name: backtest-output
           path: out/
