--- a/.github/workflows/ets-smoke-cli.yml
+++ b/.github/workflows/ets-smoke-cli.yml
@@ -1,4 +1,4 @@
-name: Phase 4 - Smoke + CLI
+name: Phase 4 – Smoke CLI
 
 on:
   workflow_dispatch:
@@ -7,12 +7,21 @@ on:
 jobs:
   smoke-cli:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
+
+      - name: Install test dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest pytest-cov
+          pip install -e .
+
       - name: Run smoke tests
         run: pytest -m smoke -q --disable-warnings
