--- a/.github/workflows/ets-smoke-cli.yml
+++ b/.github/workflows/ets-smoke-cli.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Install test dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov requests
           pip install -e .
 
       - name: Run smoke tests
