--- a/.github/workflows/ets-backtest.yml
+++ b/.github/workflows/ets-backtest.yml
@@ -1,45 +1,46 @@
-name: Phase 3 – Backtest
+name: ETS Backtest Core
 
 on:
+  push:
+    branches: [ main, ets_update_2, ets_update_3 ]
   workflow_dispatch:
-  workflow_call:
 
 jobs:
   backtest:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}/EarningsTradingSystem_V1
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip wheel setuptools
-          pip install -r requirements.txt || true
+          python -m pip install --upgrade pip wheel setuptools pytest
+          pip install -e .
+          pip install pandas
 
-      # 🔥 REQUIRED FIX — makes `import ets` work in GitHub Actions
-      - name: Install ETS (editable mode)
-        run: pip install -e .
-
-      - name: Prepare test tickers
+      - name: Run backtest (fixtures)
+        env:
+          BACKTEST_SIGNALS: tests/fixtures/mock_signals.csv
+          BACKTEST_HISTORY: tests/fixtures/mock_history.csv
         run: |
-          echo "AAPL" > tickers.csv
-          echo "MSFT" >> tickers.csv
+          python scripts/run_backtest.py
 
-      - name: Run backtest
+      - name: Run backtest core test
         run: |
-          python -m ets.main \
-            --session amc \
-            --date 2024-10-02 \
-            --tickers tickers.csv
+          pytest -q --disable-warnings tests/test_backtest_core.py
 
-      - name: Upload results
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: backtest-output
-          path: out/
+          name: ets-backtest
+          path: |
+            reports/*
+            metrics/*
+            out/*
