Trigger: reload ETS Full workflow (force GH Actions to recognize file)

--- a/.github/workflows/ets-full.yml
+++ b/.github/workflows/ets-full.yml
@@ -33,3 +33,5 @@ jobs:
       - name: Run CLI help
         run: |
           python -m ets.main --help
+# force workflow refresh
+# force workflow refresh
