--- a/.github/workflows/ets-full.yml
+++ b/.github/workflows/ets-full.yml
@@ -1,4 +1,4 @@
-name: ETS Full Smoke + CLI
+name: ETS Full Pipeline (Phases 1–4)
 
 on:
   push:
@@ -7,56 +7,104 @@ on:
 
 jobs:
 
-  # ============================
-  # Phase 1 — Environment Setup
-  # ============================
+  # -------------------------
+  # PHASE 1 — ENV SETUP
+  # -------------------------
   env_setup:
-    uses: ./.github/workflows/ets-env-setup.yml
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
+    steps:
+      - uses: actions/checkout@v4
 
-  # =======================================
-  # Phase 2 — Provider Validation (depends)
-  # =======================================
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Run Env Setup Workflow
+        run: |
+          echo "=== Running Phase 1: Env Setup ==="
+          python -m pip install --upgrade pip wheel setuptools
+          pip install .
+          pytest -q --disable-warnings tests/smoke/test_imports.py
+
+
+  # -------------------------
+  # PHASE 2 — PROVIDER VALIDATION
+  # -------------------------
   provider_validation:
     needs: env_setup
-    uses: ./.github/workflows/ets-provider-validation.yml
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
+    steps:
+      - uses: actions/checkout@v4
 
-  # ============================================
-  # Phase 3 — Analytics Suite (depends on phase2)
-  # ============================================
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Run Provider Validation
+        run: |
+          echo "=== Running Phase 2: Provider Validation ==="
+          pip install .
+          pytest -q --disable-warnings tests/integration/test_provider_registry_offline.py
+
+
+  # -------------------------
+  # PHASE 3 — ANALYTICS SUITE
+  # (your chosen file: ets-analysis.yml)
+  # -------------------------
   analytics:
     needs: provider_validation
-    uses: ./.github/workflows/ets-analytics.yml
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
+    steps:
+      - uses: actions/checkout@v4
 
-  # ========================================================
-  # Phase 4 — Full Smoke + CLI (depends on analytics phase)
-  # ========================================================
-  full:
+      - uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+
+      - name: Run Analytics Tests
+        run: |
+          echo "=== Running Phase 3: Analytics ==="
+          pip install .
+          pytest -q --disable-warnings tests/integration/test_backtest_roundtrip.py
+          python scripts/run_analytics.py
+
+
+  # -------------------------
+  # PHASE 4 — FULL SMOKE + CLI
+  # (your chosen file: ets-smoke-cli.yml)
+  # -------------------------
+  full_smoke:
     needs: analytics
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ${{ github.workspace }}
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install project
         run: |
-          python -m pip install --upgrade pip wheel setuptools pytest
+          python -m pip install --upgrade pip wheel setuptools
           pip install .
 
-      - name: Run smoke tests
+      - name: Run Smoke Tests
         run: |
+          echo "=== Running Phase 4: Full Smoke Tests ==="
           pytest -q --disable-warnings tests/smoke
 
-      - name: Run CLI help
+      - name: Run CLI Help
         run: |
           python -m ets.main --help
-
-# force workflow refresh
