--- a/.github/workflows/ets-full.yml
+++ b/.github/workflows/ets-full.yml
@@ -1,4 +1,4 @@
-name: ETS Full Pipeline (Phases 1–4)
+name: ETS Full System Completion (Data → Factors → Signals → Backtest → Predictions)
 
 on:
   push:
@@ -7,104 +7,209 @@ on:
 
 jobs:
 
-  # -------------------------
-  # PHASE 1 — ENV SETUP
-  # -------------------------
+  # ----------------------------------------------------
+  # PHASE 0 — ENV SETUP + INSTALL (ensures buildability)
+  # ----------------------------------------------------
   env_setup:
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ${{ github.workspace }}
+
     steps:
       - uses: actions/checkout@v4
 
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: Run Env Setup Workflow
+      - name: Install core dependencies
         run: |
-          echo "=== Running Phase 1: Env Setup ==="
           python -m pip install --upgrade pip wheel setuptools
-          pip install .
-          pytest -q --disable-warnings tests/smoke/test_imports.py
+          pip install -e .
+
+      - name: Run basic smoke imports
+        run: |
+          pytest -q tests/smoke/test_imports.py
 
 
-  # -------------------------
-  # PHASE 2 — PROVIDER VALIDATION
-  # -------------------------
+  # ----------------------------------------------------
+  # PHASE 1 — PROVIDER VALIDATION
+  # (Ensures data providers + registry + rate limit logic boot)
+  # ----------------------------------------------------
   provider_validation:
     needs: env_setup
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ${{ github.workspace }}
+
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: Run Provider Validation
+      - name: Install project
+        run: pip install -e .
+
+      - name: Validate providers
         run: |
-          echo "=== Running Phase 2: Provider Validation ==="
-          pip install .
-          pytest -q --disable-warnings tests/integration/test_provider_registry_offline.py
+          pytest -q tests/integration/test_provider_registry_offline.py
 
 
-  # -------------------------
-  # PHASE 3 — ANALYTICS SUITE
-  # (your chosen file: ets-analysis.yml)
-  # -------------------------
-  analytics:
+  # ----------------------------------------------------
+  # PHASE 2 — DATA COLLECTION (mock offline prefetch)
+  # ----------------------------------------------------
+  data_collection:
     needs: provider_validation
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ${{ github.workspace }}
+
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
-      - name: Run Analytics Tests
+      - name: Install project
+        run: pip install -e .
+
+      - name: Prefetch Daily (offline mock workload)
         run: |
-          echo "=== Running Phase 3: Analytics ==="
-          pip install .
-          pytest -q --disable-warnings tests/integration/test_backtest_roundtrip.py
+          python src/ets/scripts/prefetch_daily.py || true
+
+
+  # ----------------------------------------------------
+  # PHASE 3 — FACTOR GENERATION (raw → sigma → vix → trend)
+  # ----------------------------------------------------
+  factor_generation:
+    needs: data_collection
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install project
+        run: pip install -e .
+
+      - name: Build raw factors
+        run: python src/ets/scripts/build_factors_latest.py
+
+      - name: Build universe
+        run: python src/ets/scripts/build_universe.py
+
+
+  # ----------------------------------------------------
+  # PHASE 4 — SIGNAL REBUILD + PANEL PREP
+  # ----------------------------------------------------
+  signal_rebuild:
+    needs: factor_generation
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install project
+        run: pip install -e .
+
+      - name: Rebuild signals
+        run: python src/ets/backtest/signal_rebuilder.py
+
+
+  # ----------------------------------------------------
+  # PHASE 5 — FULL BACKTEST ROUNDTRIP
+  # ----------------------------------------------------
+  backtest:
+    needs: signal_rebuild
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
+
+    env:
+      PYTHONPATH: ${{ github.workspace }}/src
+      BACKTEST_SIGNALS: tests/fixtures/mock_signals.csv
+      BACKTEST_HISTORY: tests/fixtures/mock_history.csv
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install project
+        run: pip install -e .
+
+      - name: Run full backtest
+        run: python scripts/run_backtest.py
+
+      - name: Validate backtest via pytest
+        run: |
+          pytest -q tests/integration/test_backtest_roundtrip.py
+
+
+  # ----------------------------------------------------
+  # PHASE 6 — ANALYTICS SUITE (sector, history, telemetry)
+  # ----------------------------------------------------
+  analytics:
+    needs: backtest
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install project
+        run: pip install -e .
+
+      - name: Run analytics processors
+        run: |
           python scripts/run_analytics.py
 
 
-  # -------------------------
-  # PHASE 4 — FULL SMOKE + CLI
-  # (your chosen file: ets-smoke-cli.yml)
-  # -------------------------
-  full_smoke:
+  # ----------------------------------------------------
+  # PHASE 7 — FINAL SMOKE + CLI + PREDICTIONS
+  # ----------------------------------------------------
+  final_prediction:
     needs: analytics
     runs-on: ubuntu-latest
     defaults:
       run:
         working-directory: ${{ github.workspace }}
+
     steps:
       - uses: actions/checkout@v4
-
       - uses: actions/setup-python@v5
         with:
-          python-version: '3.11'
+          python-version: "3.11"
 
       - name: Install project
-        run: |
-          python -m pip install --upgrade pip wheel setuptools
-          pip install .
+        run: pip install -e .
 
-      - name: Run Smoke Tests
-        run: |
-          echo "=== Running Phase 4: Full Smoke Tests ==="
-          pytest -q --disable-warnings tests/smoke
+      - name: Run CLI help
+        run: python -m ets.main --help
 
-      - name: Run CLI Help
+      - name: Produce Actual ETS Predictions
         run: |
-          python -m ets.main --help
+          echo "=== Running Final ETS prediction (mock tickers_small.csv) ==="
+          ets-run --session amc --date $(date -u +%F) --tickers tickers.csv
