--- a/.github/workflows/ets-env-setup.yml
+++ b/.github/workflows/ets-env-setup.yml
@@ -1,32 +1,28 @@
-name: Phase 1 - Env Setup
+name: ETS Env Setup
 
 on:
+  push:
+    branches: [ main, ets_update_3 ]
   workflow_dispatch:
-  workflow_call:
 
 jobs:
-  env-setup:
+  env_setup:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
-      - name: Install dependencies
+          python-version: '3.11'
+
+      - name: Install core dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          pip install pre-commit ruff black pytest pandas || true
-          pip install -r requirements.txt || true
-      - name: Run pre-commit (lint/format checks)
-        run: |
-          pre-commit install --install-hooks
-          pre-commit run --all-files --show-diff-on-failure
-      - name: Freeze environment
-        run: pip freeze > env-lock-ubuntu-py311.txt
-      - name: Upload lockfile artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: env-lock-ubuntu-py311
-          path: env-lock-ubuntu-py311.txt
+          pip install .
+          pip install pytest
+
+      - name: Run basic smoke imports
+        run: pytest -q tests/smoke/test_imports.py
