--- a/.github/workflows/ets-provider-validate.yml
+++ b/.github/workflows/ets-provider-validate.yml
@@ -1,26 +1,29 @@
-name: Phase 2 - Provider Validation
+name: ETS Provider Validation
 
 on:
+  push:
+    branches: [ main, ets_update_2, ets_update_3 ]
   workflow_dispatch:
-  workflow_call:
 
 jobs:
-  provider-validate:
+  provider_validation:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.11"
+          python-version: '3.11'
 
-      - name: Install dependencies
+      - name: Install project + test dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          pip install pandas requests pyyaml || true
-          pip install -r requirements.txt || true
+          pip install .
+          pip install pytest
 
-      - name: Validate data providers
-        run: python scripts/validate_providers.py
+      - name: Validate providers (offline integration test)
+        run: |
+          pytest -q tests/integration/test_provider_registry_offline.py
