--- a/.github/workflows/ets-provider-validate.yml
+++ b/.github/workflows/ets-provider-validate.yml
@@ -9,6 +9,10 @@ jobs:
   provider_validation:
     runs-on: ubuntu-latest
 
+    defaults:
+      run:
+        working-directory: ${{ github.workspace }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -21,8 +25,8 @@ jobs:
       - name: Install project + test dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          pip install .
-          pip install pytest
+          pip install .          # install your ETS package
+          pip install pytest     # ensure pytest exists
 
       - name: Validate providers (offline integration test)
         run: |
