--- a/.github/workflows/ets-env-setup.yml
+++ b/.github/workflows/ets-env-setup.yml
@@ -18,7 +18,7 @@ jobs:
       - name: Install core dependencies
         run: |
           python -m pip install --upgrade pip wheel setuptools
-          pip install .
+          pip install --editable .
           pip install pytest
           pip install requests
 
