Hardening provider registry and CI determinism

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
+addopts = -q -ra -W error
+testpaths = tests
 markers =
     smoke: lightweight sanity tests (<60s)
     integration: full offline integration tests using fixtures/mocks
