--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,6 +14,9 @@ jobs:
         working-directory: /home/runner/work/EarningsTradingSystem_V1/EarningsTradingSystem_V1
     env:
       PYTHONPATH: /home/runner/work/EarningsTradingSystem_V1/EarningsTradingSystem_V1/src
+      ETS_STRICT_DETERMINISM: "1"
+      ETS_SEED: "1337"
+      ETS_OFFLINE: "1"
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -26,8 +29,8 @@ jobs:
           python -m pip install --upgrade pip wheel setuptools pandas pytest ruff black
       - name: Lint + Format (non-fatal)
         run: |
-          ruff check . || true
-          black --check . || true
+          ruff check .
+          black --check .
       - name: Run minimal tests
         run: |
-          pytest -q --disable-warnings || true
+          pytest -q --disable-warnings
