--- a/.github/workflows/ets-backtest.yml
+++ b/.github/workflows/ets-backtest.yml
@@ -6,6 +6,10 @@ on:
 jobs:
   backtest:
     runs-on: ubuntu-latest
+    env:
+      ETS_STRICT_DETERMINISM: "1"
+      ETS_SEED: "1337"
+      ETS_OFFLINE: "1"
     defaults:
       run:
         working-directory: ${{ github.workspace }}
