--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,24 @@ description = "Earnings Trading System"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
-  "pyyaml>=6.0.1"
+  "pyyaml>=6.0.1",
+  "pandas>=2.2.2",
+  "numpy>=1.26.4",
+  "yfinance>=0.2.43",
+  "requests>=2.32.3",
+  "python-dateutil>=2.9.0.post0",
+  "pytz>=2024.1",
+  "python-dotenv>=1.0.0",
+  "pytrends>=4.9.2",
 ]
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+include-package-data = false
+
+[tool.setuptools.packages.find]
+where = ["src"]
+exclude = ["*.bak*", "*.tmp"]
 
 [tool.black]
 line-length = 100
